<resources>
    <string name="app_name">Smart Receipt</string>
    <string name="app_version">1.0</string>
    <string name="subscription">S\'inscrire</string>
    <string name="subscription_title">Inscription</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <!-- Password (optional)-->
    <string name="prompt_password">Mot de passe</string>
    <!-- Sign in or register-->
    <string name="action_sign_in">Connexion</string>
    <!-- Sign in or register-->
    <string name="action_subscription">S\'INSCRIRE</string>
    <!-- Sign in-->
    <string name="action_sign_in_short">Connexion</string>
    <!-- This email address is invalid-->
    <string name="error_invalid_email">Adresse email invalide</string>
    <!-- This password is too short-->
    <string name="error_invalid_password">Mot de passe trop court</string>
    <!-- This password is incorrect-->
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <!-- This field is required -->
    <string name="error_field_required">Ce champ doit être rempli</string>
    <!-- "Contacts permissions are needed for providing email
        completions." -->
    <string name="permission_rationale">La permission d\'accèder aux contacts du téléphone est requis pour l\'auto-complètion des adresses email</string>

    <string name="menu_receipt">Tickets de caisse</string>
    <string name="menu_receipt_list">Liste des Tickets</string>
    <string name="menu_receipt_photo">Numeriser un Ticket</string>

    <string name="menu_stores">Points de vente</string>
    <string name="menu_stores_search">Rechercher</string>
    <string name="menu_stores_favoris">Favoris</string>
    <string name="menu_stores_proximity">A proximité</string>

    <string name="menu_products">Produits</string>
    <string name="menu_list">Liste de course</string>
    <string name="menu_alert">Alertes</string>
    <string name="menu_conso">Consomation</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_disconnect">Déconnexion</string>
    <string name="title_activity_menu_receipt">Tickets de caisse</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_menu_stores">Points de vente</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Pour la Map -->
    <string name="title_activity_stores_maps">Recherche de magasin</string>
    <string name="google_maps_key">AIzaSyAJGCvK9RuS4YQwDhXAt3oTNcosAurCJME</string>

</resources>
