<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itssf.smart_receipt.MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_receipt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_receipt_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_receipt"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_store"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_store_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_stores" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_shopping_basket_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_products" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_local_grocery_store_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_list" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_alarm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_alarm_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_alert" />
                </LinearLayout></LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_conso"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_trending_up_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_conso" />

                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_settings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_settings_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_settings" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_disconnect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_settings_power_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_disconnect" />

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
