<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itssf.smart_receipt.MenuStoresActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_stores_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_search_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_stores_search"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_stores_favoris"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_favorite_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_stores_favoris" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
            <LinearLayout
                android:id="@+id/menu_stores_proximity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_list_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/menu_list_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="@dimen/menu_svg_size"
                        android:layout_height="@dimen/menu_svg_size"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/ic_location_24dp" />

                    <Space
                        android:layout_width="@dimen/menu_spacer_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu_stores_proximity" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/textlines"
                />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
